--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
     <main class="container-lg">
         <header class="jumbotron">
             <h1 class="display-2">REST API</h1>
-            <h2>A RESTful Web Service Powered by Node &amp; Express</h2>
+            <h4>A Simple Javascript RESTful Web Service Powered by Node &amp; Express</h4>
         </header>
         <section class="container-fluid">
             <section>
@@ -97,10 +97,10 @@
                         </tr>
                     </tbody>
                 </table>
-                <h3>Website</h3>
+                <h3>Website/Portfolio</h3>
                 <p>
-                    Contact me through my website 
-                    <a href="https://www.emilyejohnson.com" target="_blank">Contact Me</a>.
+                    Contact me through 
+                    <a href="https://www.emilyejohnson.com" target="_blank">my website</a>.
                 </p>
                 <h3>Find Me</h3>
                 <p>
