add routes to server file

--- a/views/index.html
+++ b/views/index.html
@@ -97,10 +97,10 @@
                         </tr>
                     </tbody>
                 </table>
-                <h3>Website/Portfolio</h3>
+                <h3>Testing</h3>
                 <p>
-                    Contact me through 
-                    <a href="https://www.emilyejohnson.com" target="_blank">my website</a>.
+                    Test CRUD operations, Accept parameters, and construct requests with 
+                    <a href="https://www.getpostman.com/" target="_blank">Postman</a>.
                 </p>
                 <h3>Find Me</h3>
                 <p>
